--- a/styles.css
+++ b/styles.css
@@ -1,93 +1,160 @@
 
-/* BACKGROUND AND CENTERING */
 body {
+    font-family: Mukta, sans-serif;
+    font-size: 16px;
     margin: 0;
-    font-family: sans-serif;
-    background: linear-gradient(135deg, #6A9CD9, #B17DD6);
-    display: flex;
-    justify-content: center;
-    padding: 3rem 1rem;
+    padding: 0;
+    letter-spacing: 0.5px;
 }
 
-/*MAIN CONTAINER*/
-.container {
-    background: white;
-    max-width: 1000px;
-    width: 100%;
-    padding: 2rem;
-    border-radius: 12px;
-    box-shadow: 0 4px 30px rgba(0,0,0,0.1);
-}
-
-/*COURSE SECTION*/
-.course-header {
-    margin-bottom: 1rem;
-}
-
-.course-header h2 {
-    margin: 0;
-}
-
-.provider,
-.date {
-    display: block;
-    font-size: .9rem;
-    color: #666;
-}
-
-
-/*PROJECTS GRID*/
-.projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 1.5rem
-}
-
-/*PROJECT CARDS*/
-
-.project-column {
-    display: flex;
-    flex-direction: column;
-}
-.project-card {
-    border: 2px solid #D7C6ED;
-    padding:1rem;
-    border-radius:10px;
-}
-
-.project-card h3 {
-    margin: 0;
-}
-
-.project-card .label {
-    color: #a06cd5;
-    font-size: .9rem;
-    margin: 0;
-}
-
-.resource-list {
-    list-style: none;
-    padding-left: 0;
-    margin: 1rem;
-
-
-}
-
-.resource-list li {
-    margin: 0.2rem 0;
-}
-
-.resource-list a {
-    text-decoration: none;
-    font-size: .9rem;
-
+h1, h2, h3, h4, h5, h6 {
+    font-family: bitter, serif;
+    font-weight: 500;
 }
 
 h1 {
-    color:rgb(7, 99, 139)
+    font-size:80px;
+    font-weight: 400;
+    letter-spacing: -1.5px;
+    margin: 0;
 }
 
-.divider {
-    border-top: 1px solid #CCC;
-    margin: 2rem 0;
+h2 {
+    font-size: 50px;
+    
+    letter-spacing: -0.5px;
 }
+
+h3 {
+    font-size: 38px;
+    letter-spacing: 0px;
+    
+}
+
+h4 {
+    font-size: 30px;
+    letter-spacing: 0.25px;
+}
+
+h5 {
+    font-size: 24px;
+    letter-spacing: 0.25px;
+
+}
+
+h6 {
+    font-size: 20px;
+    letter-spacing: 0.25px;
+}
+
+code {
+    color:#E95400;
+    font-weight: bold;
+
+}
+
+.content {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 32px;
+
+}
+
+.content h3 {
+    text-transform: capitalize;
+}
+
+.info {
+    text-align: center;
+    text-transform: uppercase;
+    font-family: bitter, serif;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 1.5px;
+}
+
+.info span {
+    color: #E95400;
+}
+
+.headline {
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 0px;
+    margin: 40px 0;
+    font-size: 18px;
+}
+
+
+
+.quote {
+    font-style: italic;
+    font-size: 14px;
+    border-left: 2px solid #E95400;
+    padding-left: 16px;
+    margin: 32px 0 32px 32px;
+}
+
+.quote cite {
+    display: block;
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+footer {
+    background-color: #863AE8;
+    
+}
+
+footer ul {
+    list-style: none;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 900px;
+    text-align: center;
+    padding: 28px;
+   
+}
+
+footer ul li {
+    display: inline;
+    padding: 0 16px;
+}
+
+footer li a {
+    text-decoration: none;
+    color: white;
+}
+
+
+footer li a:hover {
+    text-decoration: underline;
+    
+}
+
+.hero {
+    background-color: #863AE8;
+    height: 100vh;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+}
+
+.hero h1, 
+.hero p {
+    width: 75%;
+    max-width: 900px;
+    margin: 16px 0;
+}
+
+.hero hr {
+    width: 50%;
+    margin: 32px 0;
+
+}
+
