--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,23 @@ body {
     background: linear-gradient(135deg, #6A9CD9, #B17DD6);
     display: flex;
     justify-content: center;
+    align-items: center;
     padding: 3rem 1rem;
+    min-height: 100vh;
 }
 
 /*MAIN CONTAINER*/
 .container {
     background: white;
     max-width: 1000px;
-    width: 100%;
+    width: 75%;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 4px 30px rgba(0,0,0,0.1);
+    margin: 100px auto;
 }
+
+
 
 /*COURSE SECTION*/
 .course-header {
@@ -31,7 +36,7 @@ body {
 .provider,
 .date {
     display: block;
-    font-size: .9rem;
+    font-size: 0.9rem;
     color: #666;
 }
 
@@ -39,8 +44,8 @@ body {
 /*PROJECTS GRID*/
 .projects-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 1.5rem
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 2rem;
 }
 
 /*PROJECT CARDS*/
@@ -51,8 +56,9 @@ body {
 }
 .project-card {
     border: 2px solid #D7C6ED;
-    padding:1rem;
+    padding: 1rem;
     border-radius:10px;
+    margin-bottom: 1rem;
 }
 
 .project-card h3 {
@@ -61,7 +67,7 @@ body {
 
 .project-card .label {
     color: #a06cd5;
-    font-size: .9rem;
+    font-size: 0.9rem;
     margin: 0;
 }
 
@@ -79,15 +85,38 @@ body {
 
 .resource-list a {
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 0.9rem;
 
 }
 
+.resource-list a:hover {
+    color: orange;
+}
+
 h1 {
-    color:rgb(7, 99, 139)
+    color:rgb(7, 99, 139);
+
+   
+}
+
+h2 {
+    color: darkgrey
 }
 
 .divider {
     border-top: 1px solid #CCC;
     margin: 2rem 0;
 }
+
+img {
+    width: 100%;
+    max-width: 6em;
+    float: right;
+    border-radius: 10px;
+    border: 2px solid black;
+    margin-right: 6em;;
+}
+
+
+
+
