--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     margin: 0;
     font-family: sans-serif;
+    font-size: em;
     background: linear-gradient(135deg, #6A9CD9, #B17DD6);
     display: flex;
     justify-content: center;
@@ -18,8 +19,8 @@ body {
 /*MAIN CONTAINER*/
 .container {
     background: white;
-    max-width: 1000px;
-    width: 75%;
+    max-width: 1100px;
+    width: 80%;
     padding: 2rem;
     border-radius: 12px;
     box-shadow: 0 4px 30px rgba(0,0,0,0.1);
@@ -36,10 +37,11 @@ body {
 }
 
 .avatar {
-    width: 140px;
-    height:140px;
-    border-radius: 50%;
+    width: 150px;
+    height:150px;
+    border-radius: 30%;
     margin: 3rem 0 1rem 0;
+    border: 2px solid black;
 }
 
 
@@ -56,7 +58,7 @@ body {
     text-align: center;
 }
 
-.course-header h3 {
+.course-header h3, p {
     margin: 0;
 }
 
@@ -66,11 +68,10 @@ body {
     font-size: 0.9rem;
     color: #666;
     padding: 0;
-}
-
-p {
     margin: 0;
 }
+
+
 
 /*PROJECTS GRID*/
 .projects-grid {
@@ -90,10 +91,11 @@ p {
     padding: 1rem;
     border-radius:10px;
     margin-bottom: 1rem;
+    font-size: .6em
 }
 
 .project-card h3 {
-    margin: 0;
+    margin-bottom: .5em;
     
   
 }
@@ -101,6 +103,7 @@ p {
 .project-card a {
     text-decoration: none;
     color: #000;
+     
 }
 
 .project-card h3 a:hover {
@@ -182,6 +185,30 @@ details[open] summary {
 span {
     padding-left: 1.2rem
 }
+
+
+
+
+
+.focus > span,
+.build > span {
+    color: lightskyblue;
+    padding: 0;
+    font-weight: bold;
+    
+}
+
+.focus,
+.build {
+    margin: .5em 0 .5em 0;
+}
+
+.resource-list > p {
+    margin: .5em 0 0.5em 0;
+
+}
+
+
 
 
 
